--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ cookiecutter==1.7.3
 geotorch==0.3.0
 ipywidgets==7.6.5
 wandb==0.12.9
+pytorch-lightning==1.5.7
 #For netrep, A.H.Williams' commit on December 13 is used. If you want to use master branch:
 #git+git://github.com/ahwillia/netrep@master#egg=netrep 
 git+git://github.com/ahwillia/netrep@bc98a59f60aa87eef0935fff8bf7708d354935be#egg=netrep
